--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 * {
   background-color: #fff;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 60px;
+}
+
+.button {
+  border: 2px solid black;
+  width: 60px;
+  float: right;
 }
